--- a/CurrencyApp/CurrencyApp/Base.lproj/Main.storyboard
+++ b/CurrencyApp/CurrencyApp/Base.lproj/Main.storyboard
@@ -31,16 +31,15 @@
                                 <rect key="frame" x="16" y="195" width="361" height="214"/>
                                 <subviews>
                                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="odA-dL-RpQ" userLabel="FromPickerView">
-                                        <rect key="frame" x="0.0" y="0.0" width="187.66666666666666" height="214"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="214"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" priority="750" constant="100" id="AV0-3w-tQL"/>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="CQY-eo-h7A"/>
+                                            <constraint firstAttribute="width" constant="100" id="AV0-3w-tQL"/>
                                         </constraints>
                                     </pickerView>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1.0" borderStyle="roundedRect" placeholder="Amount" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Qxc-WM-UQd" userLabel="FromTextField">
-                                        <rect key="frame" x="187.66666666666663" y="0.0" width="173.33333333333337" height="214"/>
+                                        <rect key="frame" x="100" y="0.0" width="261" height="214"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="43"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                     </textField>
                                 </subviews>
                             </stackView>
@@ -64,16 +63,15 @@
                                 <rect key="frame" x="16" y="519" width="361" height="216"/>
                                 <subviews>
                                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="usT-MG-bbJ" userLabel="ToPickerView">
-                                        <rect key="frame" x="0.0" y="0.0" width="187.66666666666666" height="216"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="216"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" priority="750" constant="100" id="Dx1-11-92b"/>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="sia-yg-f6E"/>
+                                            <constraint firstAttribute="width" constant="100" id="Dx1-11-92b"/>
                                         </constraints>
                                     </pickerView>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ddA-xF-0e2" userLabel="ToTextField">
-                                        <rect key="frame" x="187.66666666666663" y="0.0" width="173.33333333333337" height="216"/>
+                                        <rect key="frame" x="100" y="0.0" width="261" height="216"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="43"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                     </textField>
                                 </subviews>
                             </stackView>
@@ -124,6 +122,7 @@
                         <outlet property="fromPickerView" destination="odA-dL-RpQ" id="oVj-Ov-doS"/>
                         <outlet property="fromTextField" destination="Qxc-WM-UQd" id="M6T-13-H9f"/>
                         <outlet property="toPickerView" destination="usT-MG-bbJ" id="vXm-g8-y0e"/>
+                        <outlet property="toTextField" destination="ddA-xF-0e2" id="6uy-w7-fQL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
